# wealthfolio

./: Cargo.toml  pnpm-lock.yaml
crates/ai/: Cargo.toml
crates/ai/src/: error.rs  lib.rs
crates/ai/src/chat/: streaming.rs
crates/ai/src/env/: mod.rs  test_env.rs
crates/ai/src/tools/: asset_classification.rs  constants.rs  mod.rs  propose_categories.rs  rig_adapter.rs
crates/ai/tests/: tool_outputs_parity.rs  tool_schemas.rs
crates/ai/tests/snapshots/: tool_outputs_parity__output_get_accounts_compact.snap  tool_outputs_parity__output_get_asset_allocation.snap  tool_outputs_parity__output_get_asset_allocation_by_region.snap  tool_outputs_parity__output_get_asset_allocation_by_risk.snap  tool_outputs_parity__output_get_asset_allocation_by_sector.snap  tool_outputs_parity__output_get_asset_allocation_drill_down.snap  tool_outputs_parity__output_get_asset_allocation_invalid_group_by.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_all_taxonomies.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_ambiguous_name.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_ambiguous_symbol.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_candidate_label.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_empty_query.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_filtered.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_fuzzy_name.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_inactive_asset.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_name_match.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_provider_suffix.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_symbol_mic.snap  tool_outputs_parity__output_get_asset_taxonomy_assignments_unknown_taxonomy.snap  tool_outputs_parity__output_get_cash_balances.snap  tool_outputs_parity__output_get_goals.snap  tool_outputs_parity__output_get_health_status.snap  tool_outputs_parity__output_get_holdings.snap  tool_outputs_parity__output_get_holdings_scoped.snap  tool_outputs_parity__output_get_income.snap  tool_outputs_parity__output_get_income_default.snap  tool_outputs_parity__output_get_performance.snap  tool_outputs_parity__output_get_performance_scoped.snap  tool_outputs_parity__output_get_valuation_history.snap  tool_outputs_parity__output_get_valuation_history_scoped.snap  tool_outputs_parity__output_list_asset_taxonomies.snap  tool_outputs_parity__output_list_asset_taxonomies_invalid_depth.snap  tool_outputs_parity__output_list_asset_taxonomies_seeded_all_categories.snap  tool_outputs_parity__output_list_asset_taxonomies_seeded_root_categories.snap  tool_outputs_parity__output_list_asset_taxonomies_seeded_summaries.snap  (+7 more)
crates/wealthfolio-mcp/: Cargo.toml
crates/wealthfolio-mcp/src/: audit.rs  auth.rs  handler.rs  lib.rs  service.rs
crates/wealthfolio-mcp/tests/: http_roundtrip.rs
(+167 files in other folders)
